<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrv1a_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Mitsubisi RV1a robot</description>
  <maintainer email="m.bednarczyk@unistra.fr">m.bednarczyk</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
